add column phone number

--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -20,6 +20,12 @@
   <%= @ticket.email_address %>
 </p>
 
+
+<p>
+  <strong>Phone number:</strong>
+  <%= @ticket.phone_number %>
+</p>
+
 <p>
   <strong>Seat id seq:</strong>
   <%= @ticket.seat_id_seq %>
