--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -31,6 +31,12 @@
     <%= form.text_field :email_address %>
   </div>
 
+
+  <div class="field">
+    <%= form.label :phone_number %>
+    <%= form.text_field :phone_number %>
+  </div>
+
   <div class="field">
     <%= form.label :seat_id_seq %>
     <%= form.text_field :seat_id_seq %>
