--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -31,5 +31,11 @@
   <%= @ticket.seat_id_seq %>
 </p>
 
+<p>
+  <strong>Event id:</strong>
+  <%= @ticket.event_id %>
+</p>
+
+
 <%= link_to 'Edit', edit_ticket_path(@ticket) %> |
 <%= link_to 'Back', tickets_path %>
