--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -42,6 +42,11 @@
     <%= form.text_field :seat_id_seq %>
   </div>
 
+  <div class="field">
+    <%= form.label :event_id %>
+    <%= form.text_field :event_id %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
