--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -11,6 +11,7 @@
       <th>Email address</th>
       <th>Phone number</th>
       <th>Seat id seq</th>
+      <th>Event id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
         <td><%= ticket.email_address %></td>
         <td><%= ticket.phone_number %></td>
         <td><%= ticket.seat_id_seq %></td>
+        <td><%= ticket.event_id %></td>
         <td><%= link_to 'Show', ticket %></td>
         <td><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
         <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
