--- a/app/views/events/_new_ticket.html.erb
+++ b/app/views/events/_new_ticket.html.erb
@@ -1,5 +1,4 @@
 <h1>New Ticket</h1>
 
-<%= render 'form', ticket: @ticket %>
+<%= render './tickets/form', ticket: ticket%>
 
-<%= link_to 'Back', tickets_path %>
