--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', event: @event %>
 
-<%= link_to 'Back', events_path %>
+<td><%= link_to 'Back', events_path, class: 'btn btn-warning btn-xs' %></td>
