--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -1,8 +1,7 @@
-<h1>Editing Ticket</h1>
+<h1>Editing your ticket</h1>
 
 <%= render 'form', ticket: @ticket %>
 
-<%= render "events_list", events: Event.all %>
-
-<%= link_to 'Show', @ticket %> |
-<%= link_to 'Back', tickets_path %>
+<%= render "events_list", events: Event.all %> |
+<%= link_to 'Show ticket', @ticket, class: 'btn btn-info btn-xs' %> |
+<%= link_to 'Back', tickets_path, class: 'btn btn-warning btn-xs' %>
