--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New Ticket</h1>
+<h1>Buy new ticket</h1>
 
 <%= render 'form', ticket: @ticket %>
 
 <%= render "events_list", events: Event.all %>
 
-<%= link_to 'Back', tickets_path %>
+<%= link_to 'Back', tickets_path , class: 'btn btn-warning btn-xs'%>
