--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -37,7 +37,7 @@
 </p>
 
 <% if @ticket.user == current_user %>
-  <%= link_to 'Edit', edit_ticket_path(@ticket) %>
+  <%= link_to 'Edit', edit_ticket_path(@ticket), class: 'btn btn-info btn-xs' %>
 <% end %>
 
-<%= link_to 'Back', tickets_path %>
+<%= link_to 'Back', tickets_path, class: 'btn btn-warning btn-xs' %>
