--- a/app/views/events/_tickets_list.html.erb
+++ b/app/views/events/_tickets_list.html.erb
@@ -1,36 +1,45 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tickets</h1>
+<p>
+  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#allTicketCollapse" aria-expanded="false" aria-controls="collapseExample">
+    All tickets
+  </button>
+</p>
+<div class="collapse" id="allTicketCollapse">
+  <div class="card card-body">
 
-<table class = "table-striped">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Address</th>
-    <th>Price</th>
-    <th>Email address</th>
-    <th>Phone number</th>
-    <th>Seat id seq</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
+    <table class = "table-striped">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Price</th>
+        <th>Email address</th>
+        <th>Phone number</th>
+        <th>Seat id seq</th>
+        <th colspan="3"></th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <% tickets.each do |ticket| %>
-    <tr>
-      <td><%= ticket.name %></td>
-      <td><%= ticket.address %></td>
-      <td><%= ticket.price %></td>
-      <td><%= ticket.email_address %></td>
-      <td><%= ticket.phone_number %></td>
-      <td><%= ticket.seat_id_seq %></td>
-      <td><%= link_to 'Show', ticket, class: 'btn btn-info btn-xs' %></td>
-      <td><%= link_to 'Edit', edit_ticket_path(ticket), class: 'btn btn-info btn-xs' %></td>
-      <td><%= link_to 'Destroy', ticket, class: 'btn btn-danger btn-xs', method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+      <tbody>
+      <% tickets.each do |ticket| %>
+        <tr>
+          <td><%= ticket.name %></td>
+          <td><%= ticket.address %></td>
+          <td><%= ticket.price %></td>
+          <td><%= ticket.email_address %></td>
+          <td><%= ticket.phone_number %></td>
+          <td><%= ticket.seat_id_seq %></td>
+          <td><%= link_to 'Show', ticket, class: 'btn btn-info btn-xs' %></td>
+          <td><%= link_to 'Edit', edit_ticket_path(ticket), class: 'btn btn-info btn-xs' %></td>
+          <td><%= link_to 'Destroy', ticket, class: 'btn btn-danger btn-xs', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
 
-<br>
+    <br>
+  </div>
+</div>
+
 
