--- a/app/views/tickets/_events_list.html.erb
+++ b/app/views/tickets/_events_list.html.erb
@@ -1,32 +1,40 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Events</h1>
+<p>
+  <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#allEventsExample" aria-expanded="false" aria-controls="collapseExample">
+    Events
+  </button>
+</p>
+<div class="collapse" id="allEventsExample">
+  <div class="card card-body">
+    <table class = "table-striped">
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>Artist</th>
+        <th>Price Low</th>
+        <th>Price High</th>
+        <th>Event Date</th>
+        <th colspan="3"></th>
+      </tr>
+      </thead>
 
-<table class = "table-striped">
-  <thead>
-  <tr>
-    <th>Id</th>
-    <th>Artist</th>
-    <th>Price Low</th>
-    <th>Price High</th>
-    <th>Event Date</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
+      <tbody>
+      <% events.each do |event| %>
+        <tr>
+          <td><%= event.id %></td>
+          <td><%= event.artist %></td>
+          <td><%= event.price_low %></td>
+          <td><%= event.price_high %></td>
+          <td><%= event.event_date %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
 
-  <tbody>
-  <% events.each do |event| %>
-    <tr>
-      <td><%= event.id %></td>
-      <td><%= event.artist %></td>
-      <td><%= event.price_low %></td>
-      <td><%= event.price_high %></td>
-      <td><%= event.event_date %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+    <br>
 
-<br>
+    <%= link_to 'New Event', new_event_path , class: 'btn btn-success btn-xs'%>
+  </div>
+</div>
 
-<%= link_to 'New Event', new_event_path , class: 'btn btn-success btn-xs'%>
